# src/handlers/process_game_data.py
@@ -15,13 +15,15 @@ def handler(event, context):
                 new_image = record['dynamodb']['NewImage']
                 game_data = {k: parse_dynamodb_item(v) for k, v in new_image.items()}
 
-                if game_data.get('source') == 'Unified':
+                if game_data.get('source') == 'NBA_API':
                     game = Game.model_validate(game_data)
 
                     home_team = update_team_data(game.home_team, game.season,
-                                                 game.home_team_score > game.visitor_team_score)
+                                                 game.home_team_score > game.visitor_team_score,
+                                                 game_data.get("game_id"))
                     visitor_team = update_team_data(game.visitor_team, game.season,
-                                                    game.visitor_team_score > game.home_team_score)
+                                                    game.visitor_team_score > game.home_team_score,
+                                                    game_data.get("game_id"))
 
                     dynamodb.save_batch([home_team, visitor_team])
     except Exception as e:
@@ -42,20 +44,22 @@ def parse_dynamodb_item(dynamodb_item):
         return None
 
 
-def update_team_data(team_data: TeamData, season: int, is_win: bool):
+def update_team_data(team_data: TeamData, season: int, is_win: bool, game_id: str):
     teams = dynamodb.get_by_index_value(index_name=TEAM_TABLE_NAME_INDEX, key="team_name",
                                         value=team_data.full_name, sort_key="season",
                                         sort_value=season)
     if len(teams) > 0:
         team = Team.model_validate(teams[0])
-        team.game_count += 1
-        if is_win:
-            team.win_count += 1
-        else:
-            team.loss_count += 1
+        if game_id not in team.game_ids:
+            team.game_count += 1
+            if is_win:
+                team.win_count += 1
+            else:
+                team.loss_count += 1
+            team.game_ids.add(game_id)
     else:
         team = Team(team_id=team_data.abbreviation, season=season, team_name=team_data.full_name,
                     conference=team_data.conference, division=team_data.division,
                     abbreviation=team_data.abbreviation, city=team_data.city, name=team_data.name, game_count=1,
-                    win_count=1 if is_win else 0, loss_count=0 if is_win else 1)
+                    win_count=1 if is_win else 0, loss_count=0 if is_win else 1, game_ids={game_id})
     return team
